seaqt/QtCore/gen_qcborvalue.nim


proc fcQCborParserError_offset(self: pointer): clonglong {.importc: "QCborParserError_offset".}
proc fcQCborParserError_setOffset(self: pointer, offset: clonglong): void {.importc: "QCborParserError_setOffset".}
proc fcQCborParserError_error(self: pointer): pointer {.importc: "QCborParserError_error".}
proc fcQCborParserError_setError(self: pointer, error: pointer): void {.importc: "QCborParserError_setError".}
proc fcQCborParserError_errorString(self: pointer): struct_seaqt_string {.importc: "QCborParserError_errorString".}
proc fcQCborValue_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QCborValue_operatorAssign".}
proc fcQCborValue_swap(self: pointer, other: pointer): void {.importc: "QCborValue_swap".}
proc fcQCborValue_typeX(self: pointer): cint {.importc: "QCborValue_type".}
proc fcQCborValue_isInteger(self: pointer): bool {.importc: "QCborValue_isInteger".}
proc fcQCborValue_isByteArray(self: pointer): bool {.importc: "QCborValue_isByteArray".}
proc fcQCborValue_isString(self: pointer): bool {.importc: "QCborValue_isString".}
proc fcQCborValue_isArray(self: pointer): bool {.importc: "QCborValue_isArray".}
proc fcQCborValue_isMap(self: pointer): bool {.importc: "QCborValue_isMap".}
proc fcQCborValue_isTag(self: pointer): bool {.importc: "QCborValue_isTag".}
proc fcQCborValue_isFalse(self: pointer): bool {.importc: "QCborValue_isFalse".}
proc fcQCborValue_isTrue(self: pointer): bool {.importc: "QCborValue_isTrue".}
proc fcQCborValue_isBool(self: pointer): bool {.importc: "QCborValue_isBool".}
proc fcQCborValue_isNull(self: pointer): bool {.importc: "QCborValue_isNull".}
proc fcQCborValue_isUndefined(self: pointer): bool {.importc: "QCborValue_isUndefined".}
proc fcQCborValue_isDouble(self: pointer): bool {.importc: "QCborValue_isDouble".}
proc fcQCborValue_isDateTime(self: pointer): bool {.importc: "QCborValue_isDateTime".}
proc fcQCborValue_isUrl(self: pointer): bool {.importc: "QCborValue_isUrl".}
proc fcQCborValue_isRegularExpression(self: pointer): bool {.importc: "QCborValue_isRegularExpression".}
proc fcQCborValue_isUuid(self: pointer): bool {.importc: "QCborValue_isUuid".}
proc fcQCborValue_isInvalid(self: pointer): bool {.importc: "QCborValue_isInvalid".}
proc fcQCborValue_isContainer(self: pointer): bool {.importc: "QCborValue_isContainer".}
proc fcQCborValue_isSimpleType(self: pointer): bool {.importc: "QCborValue_isSimpleType".}
proc fcQCborValue_isSimpleTypeSt(self: pointer, st: cint): bool {.importc: "QCborValue_isSimpleType_st".}
proc fcQCborValue_toSimpleType(self: pointer): cint {.importc: "QCborValue_toSimpleType".}
proc fcQCborValue_toInteger(self: pointer): clonglong {.importc: "QCborValue_toInteger".}
proc fcQCborValue_toBool(self: pointer): bool {.importc: "QCborValue_toBool".}
proc fcQCborValue_toDouble(self: pointer): float64 {.importc: "QCborValue_toDouble".}
proc fcQCborValue_tag(self: pointer): cint {.importc: "QCborValue_tag".}
proc fcQCborValue_taggedValue(self: pointer): pointer {.importc: "QCborValue_taggedValue".}
proc fcQCborValue_toByteArray(self: pointer): struct_seaqt_string {.importc: "QCborValue_toByteArray".}
proc fcQCborValue_toString(self: pointer): struct_seaqt_string {.importc: "QCborValue_toString".}
proc fcQCborValue_toDateTime(self: pointer): pointer {.importc: "QCborValue_toDateTime".}
proc fcQCborValue_toUrl(self: pointer): pointer {.importc: "QCborValue_toUrl".}
proc fcQCborValue_toRegularExpression(self: pointer): pointer {.importc: "QCborValue_toRegularExpression".}
proc fcQCborValue_toUuid(self: pointer): pointer {.importc: "QCborValue_toUuid".}
proc fcQCborValue_toArray(self: pointer): pointer {.importc: "QCborValue_toArray".}
proc fcQCborValue_toArrayDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toArray_defaultValue".}
proc fcQCborValue_toMap(self: pointer): pointer {.importc: "QCborValue_toMap".}
proc fcQCborValue_toMapDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toMap_defaultValue".}
proc fcQCborValue_operatorSubscriptConstCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborValue_operatorSubscript_const_cQString".}
proc fcQCborValue_operatorSubscriptConstQint64(self: pointer, key: clonglong): pointer {.importc: "QCborValue_operatorSubscript_const_qint64".}
proc fcQCborValue_operatorSubscriptQint64(self: pointer, key: clonglong): pointer {.importc: "QCborValue_operatorSubscript_qint64".}
proc fcQCborValue_operatorSubscriptCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborValue_operatorSubscript_cQString".}
proc fcQCborValue_compare(self: pointer, other: pointer): cint {.importc: "QCborValue_compare".}
proc fcQCborValue_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorEqual".}
proc fcQCborValue_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorNotEqual".}
proc fcQCborValue_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorLesser".}
proc fcQCborValue_fromVariant(variant: pointer): pointer {.importc: "QCborValue_fromVariant".}
proc fcQCborValue_toVariant(self: pointer): pointer {.importc: "QCborValue_toVariant".}
proc fcQCborValue_fromJsonValue(v: pointer): pointer {.importc: "QCborValue_fromJsonValue".}
proc fcQCborValue_toJsonValue(self: pointer): pointer {.importc: "QCborValue_toJsonValue".}
proc fcQCborValue_fromCbor_QCborStreamReader(reader: pointer): pointer {.importc: "QCborValue_fromCbor_QCborStreamReader".}
proc fcQCborValue_fromCbor_QByteArray(ba: struct_seaqt_string): pointer {.importc: "QCborValue_fromCbor_QByteArray".}
proc fcQCborValue_fromCborCharQsizetype(data: cstring, len: int64): pointer {.importc: "QCborValue_fromCbor_char_qsizetype".}
proc fcQCborValue_fromCborQuint8Qsizetype(data: ptr uint8, len: int64): pointer {.importc: "QCborValue_fromCbor_quint8_qsizetype".}
proc fcQCborValue_toCbor(self: pointer): struct_seaqt_string {.importc: "QCborValue_toCbor".}
proc fcQCborValue_toCborWriter(self: pointer, writer: pointer): void {.importc: "QCborValue_toCbor_writer".}
proc fcQCborValue_toDiagnosticNotation(self: pointer): struct_seaqt_string {.importc: "QCborValue_toDiagnosticNotation".}
proc fcQCborValue_toSimpleTypeDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValue_toSimpleType_defaultValue".}
proc fcQCborValue_toIntegerDefaultValue(self: pointer, defaultValue: clonglong): clonglong {.importc: "QCborValue_toInteger_defaultValue".}
proc fcQCborValue_toBoolDefaultValue(self: pointer, defaultValue: bool): bool {.importc: "QCborValue_toBool_defaultValue".}
proc fcQCborValue_toDoubleDefaultValue(self: pointer, defaultValue: float64): float64 {.importc: "QCborValue_toDouble_defaultValue".}
proc fcQCborValue_tagDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValue_tag_defaultValue".}
proc fcQCborValue_taggedValueDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_taggedValue_defaultValue".}
proc fcQCborValue_toByteArrayDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValue_toByteArray_defaultValue".}
proc fcQCborValue_toStringDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValue_toString_defaultValue".}
proc fcQCborValue_toDateTimeDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toDateTime_defaultValue".}
proc fcQCborValue_toUrlDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toUrl_defaultValue".}
proc fcQCborValue_toRegularExpressionDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toRegularExpression_defaultValue".}
proc fcQCborValue_toUuidDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toUuid_defaultValue".}
proc fcQCborValue_fromCbor_QByteArray_QCborParserError(ba: struct_seaqt_string, error: pointer): pointer {.importc: "QCborValue_fromCbor_QByteArray_QCborParserError".}
proc fcQCborValue_fromCborCharQsizetype_QCborParserError(data: cstring, len: int64, error: pointer): pointer {.importc: "QCborValue_fromCbor_char_qsizetype_QCborParserError".}
proc fcQCborValue_fromCborQuint8Qsizetype_QCborParserError(data: ptr uint8, len: int64, error: pointer): pointer {.importc: "QCborValue_fromCbor_quint8_qsizetype_QCborParserError".}
proc fcQCborValue_toCborOpt(self: pointer, opt: cint): struct_seaqt_string {.importc: "QCborValue_toCbor_opt".}
proc fcQCborValue_toCborWriterOpt(self: pointer, writer: pointer, opt: cint): void {.importc: "QCborValue_toCbor_writer_opt".}
proc fcQCborValue_toDiagnosticNotationOpts(self: pointer, opts: cint): struct_seaqt_string {.importc: "QCborValue_toDiagnosticNotation_opts".}
proc fcQCborValue_new(): ptr cQCborValue {.importc: "QCborValue_new".}
proc fcQCborValue_new2(t_x: cint): ptr cQCborValue {.importc: "QCborValue_new_QCborValue_Type".}
proc fcQCborValue_new3(b_x: bool): ptr cQCborValue {.importc: "QCborValue_new_bool".}
proc fcQCborValue_new4(i: cint): ptr cQCborValue {.importc: "QCborValue_new_int".}
proc fcQCborValue_new5(u: cuint): ptr cQCborValue {.importc: "QCborValue_new_unsignedint".}
proc fcQCborValue_new6(i: clonglong): ptr cQCborValue {.importc: "QCborValue_new_qint64".}
proc fcQCborValue_new7(v: float64): ptr cQCborValue {.importc: "QCborValue_new_double".}
proc fcQCborValue_new8(st: cint): ptr cQCborValue {.importc: "QCborValue_new_QCborSimpleType".}
proc fcQCborValue_new9(ba: struct_seaqt_string): ptr cQCborValue {.importc: "QCborValue_new_QByteArray".}
proc fcQCborValue_new10(s: struct_seaqt_string): ptr cQCborValue {.importc: "QCborValue_new_QString".}
proc fcQCborValue_new11(s: cstring): ptr cQCborValue {.importc: "QCborValue_new_char".}
proc fcQCborValue_new12(a: pointer): ptr cQCborValue {.importc: "QCborValue_new_QCborArray".}
proc fcQCborValue_new13(m: pointer): ptr cQCborValue {.importc: "QCborValue_new_QCborMap".}
proc fcQCborValue_new14(tag: cint): ptr cQCborValue {.importc: "QCborValue_new_QCborTag".}
proc fcQCborValue_new15(t_x: cint): ptr cQCborValue {.importc: "QCborValue_new_QCborKnownTags".}
proc fcQCborValue_new16(dt: pointer): ptr cQCborValue {.importc: "QCborValue_new_QDateTime".}
proc fcQCborValue_new17(url: pointer): ptr cQCborValue {.importc: "QCborValue_new_QUrl".}
proc fcQCborValue_new18(rx: pointer): ptr cQCborValue {.importc: "QCborValue_new_QRegularExpression".}
proc fcQCborValue_new19(uuid: pointer): ptr cQCborValue {.importc: "QCborValue_new_QUuid".}
proc fcQCborValue_new20(fromVal: pointer): ptr cQCborValue {.importc: "QCborValue_new_QCborValue".}
proc fcQCborValue_new21(tag: cint, taggedValue: pointer): ptr cQCborValue {.importc: "QCborValue_new_QCborTag_QCborValue".}
proc fcQCborValue_new22(t_x: cint, tv: pointer): ptr cQCborValue {.importc: "QCborValue_new_QCborKnownTags_QCborValue".}
proc fcQCborValue_staticMetaObject(): pointer {.importc: "QCborValue_staticMetaObject".}
proc fcQCborValueConstRef_ToQCborValue(self: pointer): pointer {.importc: "QCborValueConstRef_ToQCborValue".}
proc fcQCborValueConstRef_typeX(self: pointer): cint {.importc: "QCborValueConstRef_type".}
proc fcQCborValueConstRef_isInteger(self: pointer): bool {.importc: "QCborValueConstRef_isInteger".}
proc fcQCborValueConstRef_isByteArray(self: pointer): bool {.importc: "QCborValueConstRef_isByteArray".}
proc fcQCborValueConstRef_isString(self: pointer): bool {.importc: "QCborValueConstRef_isString".}
proc fcQCborValueConstRef_isArray(self: pointer): bool {.importc: "QCborValueConstRef_isArray".}
proc fcQCborValueConstRef_isMap(self: pointer): bool {.importc: "QCborValueConstRef_isMap".}
proc fcQCborValueConstRef_isTag(self: pointer): bool {.importc: "QCborValueConstRef_isTag".}
proc fcQCborValueConstRef_isFalse(self: pointer): bool {.importc: "QCborValueConstRef_isFalse".}
proc fcQCborValueConstRef_isTrue(self: pointer): bool {.importc: "QCborValueConstRef_isTrue".}
